echo-test/echo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - echo1.mukasa.net
    - echo2.mukasa.net
    secretName: echo-tls
  rules:
  - host: echo1.mukasa.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.mukasa.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
